@@ -17,16 +17,21 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.stream.Stream;
-
+/** JWT Authorization Filter */
 @Configuration
 public class JWTAuthorizationFilter extends OncePerRequestFilter {
     /**
      * JWT authorization Filter configuration:
      *    - define how authorization will be handled inside the application
      */
-    private JWTConfig jwtConfig;
+    private final JWTConfig jwtConfig;
 
+    /**
+     * Constructor with parameters.
+     * @param jwtConfig JWT Configuration
+     */
     public JWTAuthorizationFilter(JWTConfig jwtConfig) {
         this.jwtConfig = jwtConfig;
     }
@@ -38,8 +43,8 @@ public class JWTAuthorizationFilter extends OncePerRequestFilter {
      *  @param req (HttpServletRequest) .
      *  @param res (HttpServletResponse) .
      *  @param chain (FilterChain).
-     *  @throws IOException
-     *  @throws ServletException
+     *  @throws IOException I/O Exception
+     *  @throws ServletException Servlet Exception
      */
     @Override
     protected void doFilterInternal(HttpServletRequest req, HttpServletResponse res, FilterChain chain) throws IOException, ServletException {
@@ -72,11 +77,11 @@ public class JWTAuthorizationFilter extends OncePerRequestFilter {
     }
     /**
      * Collection getAuthorities :
-     *    - set a role from Srting format to list format since UsernamePasswordAuthenticationToken can only read lists of roles
+     *    - set a role from String format to list format since UsernamePasswordAuthenticationToken can only read lists of roles
      *  @param role : user role (from token) as a String.
-     *  @returns  Collection of roles: user role (from token) as a list
+     *  @return Collection of roles: user role (from token) as a list
      */
     private Collection<? extends SimpleGrantedAuthority> getAuthorities(String role) {
-        return Arrays.asList(new SimpleGrantedAuthority(role));
+        return List.of(new SimpleGrantedAuthority(role));
     }
 }
